# contact-form

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  tasklist.md
.github/workflows/: django.yml
config/: urls.py
config/settings/: base.py  dev.py  prod.py
core/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/api/: serializers.py  test_api.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_rename_created_at_contactmessage_sended_at.py
core/templates/: base.html  home.html
core/templates/contact/: contact_form.html
static/css/: style.css
tests/: conftest.py
